--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -11,6 +11,39 @@
   place: Beijing, China
   sub: CE
 
+- title: CHES
+  hindex: -1
+  year: 2021
+  id: tches2021-3
+  link: https://ches.iacr.org/2021/
+  deadline: '2021-01-15 23:59:59'
+  timezone: UTC-12
+  date: September 12-15, 2021
+  place: Beijing, China
+  sub: CE
+
+- title: CHES
+  hindex: -1
+  year: 2021
+  id: tches2021-2
+  link: https://ches.iacr.org/2021/
+  deadline: '2020-10-15 23:59:59'
+  timezone: UTC-12
+  date: September 12-15, 2021
+  place: Beijing, China
+  sub: CE
+
+- title: CHES
+  hindex: -1
+  year: 2021
+  id: tches2021-1
+  link: https://ches.iacr.org/2021/
+  deadline: '2020-07-15 23:59:59'
+  timezone: UTC-12
+  date: September 12-15, 2021
+  place: Beijing, China
+  sub: CE
+
 - title: USENIX Security
   hindex: -1
   year: 2021
